--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,11 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+        
+    - name: Debug - List files
+      run: ls -la
       
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
@@ -42,9 +47,6 @@ jobs:
       
     - name: Analyze code
       run: flutter analyze
-      
-    - name: Run tests
-      run: flutter test
       
     - name: Build web app
       run: |
