--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,10 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^2.0.0
 
-# CRITICAL: Force compatible versions to fix handleThenable errors
+# CRITICAL: Force compatible versions to fix handleThenable errors and web conflicts
 dependency_overrides:
   firebase_auth_web: ^5.15.3
+  web: ^1.0.0  # Force newer web version to match firebase_auth_web requirements
 
 flutter:
   uses-material-design: true
