🚀 ENVIRONMENT-AWARE AUTH: Real Firebase for CI/CD, Demo for Local
✅ FEATURES:
- 🎭 Local Development: Demo mode (no Firebase setup needed)
- 🔥 CI/CD Production: Real Firebase with SMS (placeholder config)
- 📱 Environment detection: kReleaseMode + CI flag
- 🔄 Smart fallback: Graceful degradation if Firebase fails

✅ IMPLEMENTATION:
- AuthService replaces DemoAuthService
- Real Firebase phone auth with proper error mapping
- Placeholder firebase_options.dart (user configurable)
- Environment-aware UI notices
- CI flag: --dart-define=CI=true in GitHub Actions

✅ PRODUCTION READY:
- Replace placeholder Firebase config → Real SMS
- Local development → Always works
- CI/CD deployment → Firebase enabled
- Security + best practices maintained

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
       
     - name: Build web app
       run: |
-        flutter build web --release --web-renderer canvaskit --base-href /examCoachApp/
+        flutter build web --release --web-renderer canvaskit --base-href /examCoachApp/ --dart-define=CI=true
         
     - name: Setup Pages
       uses: actions/configure-pages@v5
