FIX: Force clean build in CI/CD to resolve caching issue

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,9 @@ jobs:
         channel: 'stable'
         cache: true
         
+    - name: Clean Flutter project
+      run: flutter clean
+      
     - name: Enable Flutter Web
       run: flutter config --enable-web
       
