--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,30 +1,31 @@
-name: exam_coach_app
-description: A secure Flutter app for exam coaching with personalized quizzes.
-publish_to: 'none' # Prevent accidental publishing
-
+name: examcoachapp
+description: A new Flutter project.
+publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
-  flutter: ">=3.0.0"
+  sdk: '>=3.1.5 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  provider: ^6.0.0
-  logger: ^2.0.0
-  flutter_secure_storage: ^9.0.0
-  
-  # HTTP requests for additional API calls if needed
+  # Remove Firebase dependencies
+  # firebase_core: ^2.15.1
+  # firebase_auth: ^4.9.0
+  cloud_firestore: ^4.9.1
+  provider: ^6.0.5
+  shared_preferences: ^2.2.1
+  intl: ^0.18.1
+  connectivity_plus: ^5.0.1
+  intl_phone_field: ^3.2.0
+  fl_chart: ^0.65.0
+  logger: ^2.0.2+1
+  # Add HTTP package for API calls
   http: ^1.1.0
-  
-  # Connectivity checking
-  connectivity_plus: ^5.0.0
-  
-  # Firebase for production authentication - Updated to latest compatible versions
-  firebase_core: ^3.8.0
-  firebase_auth: ^5.3.3
+  # Add crypto for generating secure tokens
+  crypto: ^3.0.3
+  uuid: ^4.2.1
 
 dev_dependencies:
   flutter_test:
