Add flutter_secure_storage dependency for security service

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   # Add crypto for generating secure tokens
   crypto: ^3.0.3
   uuid: ^4.2.1
+  # Security service dependency
+  flutter_secure_storage: ^9.0.0
 
 dev_dependencies:
   flutter_test:
