fix: Resolve compilation errors and clean up authentication service
- Fixed nullable phoneNumber issues in OTP verification screen
- Updated dependencies in pubspec.yaml to remove unused Firebase packages
- Cleaned up authentication service to work with demo mode
- App now compiles and runs successfully

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,10 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  # Remove Firebase dependencies
+  # Remove Firebase dependencies - removed cloud_firestore too to avoid conflicts
   # firebase_core: ^2.15.1
   # firebase_auth: ^4.9.0
-  cloud_firestore: ^4.9.1
+  # cloud_firestore: ^4.9.1
   provider: ^6.0.5
   shared_preferences: ^2.2.1
   intl: ^0.18.1
