--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,7 @@ jobs:
       run: flutter pub get
       
     - name: Analyze code
-      run: flutter analyze lib/
+      run: flutter analyze lib/ --no-fatal-warnings
       
     - name: Build web app
       run: |
