--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,23 @@
 {
-  "buildCommand": "export PATH=\"$PWD/flutter/bin:$PATH\" && flutter build web --release",
+  "buildCommand": "export PATH=\"$PWD/flutter/bin:$PATH\" && flutter build web --release --base-href /",
   "outputDirectory": "build/web",
   "framework": null,
   "installCommand": "./deploy.sh",
   "redirects": [
     {
-      "source": "/((?!api/*).*)",
+      "source": "/((?!api/|index.html).*)",
       "destination": "/index.html"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Credentials", "value": "true" },
+        { "key": "Access-Control-Allow-Origin", "value": "https://mitchell1972.github.io" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
+        { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" }
+      ]
     }
   ]
 }
