--- a/vercel.json
+++ b/vercel.json
@@ -9,17 +9,6 @@
       "destination": "/index.html"
     }
   ],
-  "headers": [
-    {
-      "source": "/api/(.*)",
-      "headers": [
-        { "key": "Access-Control-Allow-Origin", "value": "https://mitchell1972.github.io" },
-        { "key": "Access-Control-Allow-Methods", "value": "POST, OPTIONS" },
-        { "key": "Access-Control-Allow-Headers", "value": "Content-Type" },
-        { "key": "Access-Control-Max-Age", "value": "86400" }
-      ]
-    }
-  ],
   "routes": [
     {
       "src": "/api/.*",
@@ -27,10 +16,17 @@
       "status": 204,
       "headers": {
         "Access-Control-Allow-Origin": "https://mitchell1972.github.io",
-        "Access-Control-Allow-Methods": "POST, OPTIONS",
+        "Access-Control-Allow-Methods": "POST",
         "Access-Control-Allow-Headers": "Content-Type",
         "Access-Control-Max-Age": "86400"
       }
+    },
+    {
+      "src": "/api/.*",
+      "headers": {
+        "Access-Control-Allow-Origin": "https://mitchell1972.github.io"
+      },
+      "continue": true
     }
   ]
 }
