--- a/vercel.json
+++ b/vercel.json
@@ -15,7 +15,7 @@
       "methods": ["OPTIONS"],
       "status": 204,
       "headers": {
-        "Access-Control-Allow-Origin": "https://mitchell1972.github.io",
+        "Access-Control-Allow-Origin": "*",
         "Access-Control-Allow-Methods": "POST",
         "Access-Control-Allow-Headers": "Content-Type",
         "Access-Control-Max-Age": "86400"
@@ -24,7 +24,7 @@
     {
       "src": "/api/.*",
       "headers": {
-        "Access-Control-Allow-Origin": "https://mitchell1972.github.io"
+        "Access-Control-Allow-Origin": "*"
       },
       "continue": true
     }
