--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,13 @@
 {
-  "buildCommand": "export PATH=\"$PWD/flutter/bin:$PATH\" && flutter build web --release --base-href /",
-  "outputDirectory": "build/web",
-  "framework": null,
-  "installCommand": "./deploy.sh",
-  "routes": [
+  "headers": [
     {
-      "src": "/api/.*",
-      "methods": ["OPTIONS"],
-      "status": 204,
-      "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Methods": "POST",
-        "Access-Control-Allow-Headers": "Content-Type",
-        "Access-Control-Max-Age": "86400"
-      }
-    },
-    {
-      "src": "/api/.*",
-      "headers": {
-        "Access-Control-Allow-Origin": "*"
-      },
-      "continue": true
+      "source": "/api/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Credentials", "value": "true" },
+        { "key": "Access-Control-Allow-Origin", "value": "https://mitchell1972.github.io" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
+        { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" }
+      ]
     }
   ]
 }
