--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,14 @@
 {
+  "buildCommand": "export PATH=\"$PWD/flutter/bin:$PATH\" && flutter build web --release --base-href /",
+  "outputDirectory": "build/web",
+  "framework": null,
+  "installCommand": "./deploy.sh",
+  "redirects": [
+    {
+      "source": "/((?!api/|index.html).*)",
+      "destination": "/index.html"
+    }
+  ],
   "headers": [
     {
       "source": "/api/(.*)",
