--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   flutter_secure_storage: ^9.2.2
   
   # Database & Authentication (Firebase-free approach)
-  # supabase_flutter: ^2.9.1  # Temporarily removed due to Firebase conflicts
+  supabase_flutter: ^2.9.1
   
   # JWT for authentication tokens
   dart_jsonwebtoken: ^2.12.2
